fix: highlighted text contrast

--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,7 @@
 }
 
 ::selection {
-    background: #000000;
+    background: #9333ea;
 }
 
 :root {
